--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
       context: ./ms-usuarios
     container_name: usuarios_service
     depends_on:
-      - cockroach1
+      - cockroach-init
       - rabbitmq1
     environment:
-      - DATABASE_URL=postgresql://root@crdb1:26257,crdb2:26257,crdb3:26257/usuarios_db?sslmode=disable
+      - DATABASE_URL=cockroachdb://root@cockroach1:26257/usuarios_db
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq1:5672/
+      - SECRET_KEY=supersecretkey123
+      - RABBITMQ_QUEUE=usuarios_queue
     networks:
       - backend
 
@@ -21,11 +23,13 @@ services:
       context: ./ms-eventos
     container_name: eventos_service
     depends_on:
-      - cockroach1
+      - cockroach-init
       - rabbitmq1
     environment:
-      - DATABASE_URL=postgresql://root@crdb2:26257,crdb1:26257,crdb3:26257/eventos_db?sslmode=disable
+      - DATABASE_URL=cockroachdb://root@cockroach2:26257/usuarios_db
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq1:5672/
+      - SECRET_KEY=supersecretkey123
+      - RABBITMQ_QUEUE=eventos_queue
     networks:
       - backend
 
@@ -35,11 +39,13 @@ services:
       context: ./ms-entradas
     container_name: entradas_service
     depends_on:
-      - cockroach1
+      - cockroach-init
       - rabbitmq1
     environment:
-      - DATABASE_URL=postgresql://root@crdb3:26257,crdb1:26257,crdb2:26257/entradas_db?sslmode=disable
+      - DATABASE_URL=cockroachdb://root@cockroach3:26257/usuarios_db
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq1:5672/
+      - SECRET_KEY=supersecretkey123
+      - RABBITMQ_QUEUE=entradas_queue
     networks:
       - backend
 
@@ -50,8 +56,11 @@ services:
     container_name: notificaciones_service
     depends_on:
       - rabbitmq1
+      - cockroach-init
     environment:
       - RABBITMQ_URL=amqp://guest:guest@rabbitmq1:5672/
+      - SECRET_KEY=supersecretkey123
+      - RABBITMQ_QUEUE=notificaciones_queue
     networks:
       - backend
 
@@ -70,62 +79,57 @@ services:
     networks:
       - backend
 
-  # CockroachDB Nodo 1
   cockroach1:
-    image: cockroachdb/cockroach:latest
-    container_name: crdb1
-    hostname: crdb1
+    image: cockroachdb/cockroach:v21.2.17
     ports:
-      - "26257:26257" # SQL client
-      - "8080:8080" # Admin UI
+      - "26257:26257"
+      - "8080:8080"
     volumes:
       - cockroach1:/cockroach/cockroach-data
     command:
-    - start-single-node
-    - --insecure
-    - --advertise-addr=crdb1
+      - start
+      - --insecure
+      - --store=node1
+      - --listen-addr=0.0.0.0:26257
+      - --http-addr=0.0.0.0:8080
+      - --join=cockroach1:26257,cockroach2:26257,cockroach3:26257
+      - --advertise-addr=cockroach1
     networks:
       - backend
 
-  # CockroachDB Nodo 2
   cockroach2:
-    image: cockroachdb/cockroach:latest
-    container_name: crdb2
-    hostname: crdb2
+    image: cockroachdb/cockroach:v21.2.17
     ports:
       - "26258:26257"
       - "8081:8080"
     volumes:
       - cockroach2:/cockroach/cockroach-data
-    command: 
-    - start
-    - --insecure
-    - --store=node2
-    - --listen-addr=0.0.0.0:26257
-    - --http-addr=0.0.0.0:8080
-    - --join=crdb1:26257
-    - --advertise-addr=crdb2
+    command:
+      - start
+      - --insecure
+      - --store=node2
+      - --listen-addr=0.0.0.0:26257
+      - --http-addr=0.0.0.0:8080
+      - --join=cockroach1:26257,cockroach2:26257,cockroach3:26257
+      - --advertise-addr=cockroach2
     networks:
       - backend
 
-  # CockroachDB Nodo 3
   cockroach3:
-    image: cockroachdb/cockroach:latest
-    container_name: crdb3
-    hostname: crdb3
+    image: cockroachdb/cockroach:v21.2.17
     ports:
       - "26259:26257"
       - "8082:8080"
     volumes:
       - cockroach3:/cockroach/cockroach-data
     command:
-    - start 
-    - --insecure
-    - --store=node3
-    - --listen-addr=0.0.0.0:26257
-    - --http-addr=0.0.0.0:8080
-    - --join=crdb1:26257
-    - --advertise-addr=crdb3
+      - start
+      - --insecure
+      - --store=node3
+      - --listen-addr=0.0.0.0:26257
+      - --http-addr=0.0.0.0:8080
+      - --join=cockroach1:26257,cockroach2:26257,cockroach3:26257
+      - --advertise-addr=cockroach3
     networks:
       - backend
 
@@ -138,6 +142,27 @@ services:
       - "15672:15672"
     networks:
       - backend
+
+  cockroach-init:
+    image: cockroachdb/cockroach:v21.2.17
+    depends_on:
+      - cockroach1
+      - cockroach2
+      - cockroach3
+    entrypoint: >
+      /bin/sh -c "
+        until ./cockroach init --insecure --host=cockroach1 2>/dev/null; do
+          echo 'Waiting for CockroachDB to be ready...';
+          sleep 2;
+        done;
+        ./cockroach sql --insecure --host=cockroach1 -e \"
+          CREATE DATABASE IF NOT EXISTS usuarios_db;
+          CREATE DATABASE IF NOT EXISTS eventos_db;
+          CREATE DATABASE IF NOT EXISTS entradas_db;\"
+      "
+    networks:
+      - backend
+
 
 volumes:
   cockroach1:
