--- a/ms-eventos/dockerfile
+++ b/ms-eventos/dockerfile
@@ -1,20 +1,10 @@
-# Usa la imagen oficial de Python
 FROM python:3.11-slim
 
-# Establece el directorio de trabajo dentro del contenedor
 WORKDIR /app
-
-# Copia los archivos de requerimientos
 COPY requirements.txt .
-
-# Instala las dependencias
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia el resto del código fuente
-COPY . .
+COPY app ./app
+COPY run.py .
 
-# Expone el puerto que uvicorn va a usar
-EXPOSE 8000
-
-# Comando para iniciar el servidor
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "run.py"]
