--- a/ms-eventos/requirements.txt
+++ b/ms-eventos/requirements.txt
@@ -1,26 +1,23 @@
-annotated-types==0.7.0
+﻿annotated-types==0.7.0
 anyio==4.9.0
-bcrypt==4.3.0
+certifi==2025.6.15
 click==8.2.1
 colorama==0.4.6
-dnspython==2.7.0
 ecdsa==0.19.1
-email_validator==2.2.0
-fastapi==0.115.14
+fastapi==0.116.0
 greenlet==3.2.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
-passlib==1.7.4
 pika==1.3.2
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
-PyJWT==2.10.1
 python-dotenv==1.1.1
-python-jose==3.3.0
-python-multipart==0.0.20
+python-jose==3.5.0
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
@@ -28,7 +25,5 @@ SQLAlchemy==2.0.41
 sqlalchemy-cockroachdb==2.0.3
 starlette==0.46.2
 typing-inspection==0.4.1
-typing_extensions==4.14.0
+typing_extensions==4.14.1
 uvicorn==0.35.0
-sqlalchemy-cockroachdb==2.0.3
-
