--- a/ms-notificaciones/requirements.txt
+++ b/ms-notificaciones/requirements.txt
@@ -1,4 +1,4 @@
-annotated-types==0.7.0
+﻿annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
 click==8.2.1
@@ -30,6 +30,4 @@ starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 uvicorn==0.35.0
-sqlalchemy-cockroachdb==2.0.3
-
-
+websockets==11.0.3
