--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,6 +39,22 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Servir archivos estáticos (imágenes) desde el volumen compartido
+        location /uploads/ {
+            alias /var/www/uploads/;
+            try_files $uri $uri/ =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # También servir imágenes con prefijo completo de API
+        location /api/v1/eventos/uploads/ {
+            alias /var/www/uploads/;
+            try_files $uri $uri/ =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
         # Rutas del microservicio de Entradas
         location /api/v1/entradas/ {
             proxy_pass http://entradas/;
