--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,15 @@ __pycache__/
 *.swp
 *.bak
 
+# Node.js y dependencias
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn/
+.pnp.*
+
 # Docker
 *.pid
 docker-compose.override.yml
